[package]
name = "rft"
description = "A simple file transfer tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zerocopy = "0.7"
zerocopy-derive = "0.7"
anyhow = "1.0"
