[package]
name = "rft"
description = "A simple file transfer tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zerocopy = "0.7"
zerocopy-derive = "0.7"
anyhow = "1.0"
bytes = "1.7"
crc32fast = "1.4"
futures = "0.3"
data-encoding = "2.6"
ring = "0.17"
tokio = {version = "1.39", features = ["macros", "net", "rt", "time", "rt-multi-thread"] }
rand = "0.8"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = [ "run-for-all", "prepush-hook", "run-cargo-check", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt" ]
